# groan_rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  changelog.md  gsl.md  run_check.sh  run_check_tests.sh  run_doc_tests.sh  run_tests.sh  selected_water.gro  tmp_xtc_iter_range_alt_print_progress.txt  tmp_xtc_iter_range_print_progress.txt  tmp_xtc_iter_step_range_print_progress.txt  trajectory_readers.md
benches/: main.rs
book/: book.toml
book/src/: SUMMARY.md  getting_started.md  installation.md  introduction.md  tutorial1.md
comparison/rmsd/: info.md
comparison/xdrfile_vs_molly/: info.md
src/: analysis.rs  atom.rs  aux.rs  auxiliary.rs  c_xdrfile.rs  dimension.rs  errors.rs  files.rs  gro.rs  gro_io.rs  group.rs  iterators.rs  lib.rs  ndx_io.rs  pdb_io.rs  progress.rs  select.rs  shape.rs  simbox.rs  system.rs  test_utilities.rs  trr_io.rs  utility.rs  vector3d.rs  xdrfile.rs  xtc_io.rs
src/config/: elements.yaml
src/io/: chemfiles.rs  gro_io.rs  mod.rs  ndx_io.rs  pdb_io.rs  pqr_io.rs  tpr_io.rs  traj_cat.rs  traj_io.rs  traj_read.rs  traj_write.rs  trr_io.rs  xdrfile.rs  xtc_io.rs
src/io/gro_io/: mod.rs  structure.rs  trajectory.rs
src/io/xtc_io/: mod.rs  molly_xtc.rs  xdrfile_xtc.rs
src/progress/: mod.rs  progress_stream.rs
src/select/: mod.rs  name.rs  numbers.rs
src/selections/: name.rs  numbers.rs  select.rs
src/structures/: atom.rs  cellgrid.rs  container.rs  dimension.rs  element.rs  gridmap.rs  group.rs  iterators.rs  mod.rs  shape.rs  simbox.rs  traj_convert.rs  vector3d.rs
src/system/: analysis.rs  general.rs  groups.rs  guess.rs  hbonds.rs  iterating.rs  labeled_atoms.rs  mod.rs  modifying.rs  parallel.rs  rmsd.rs  utility.rs
test_files/: aa_for_testing_tpr.tpr  aa_membrane_peptide.gro  aa_membrane_peptide.tpr  aa_membrane_peptide.xtc  dodecahedron.gro  dodecahedron_trajectory.trr  dodecahedron_trajectory.xtc  dodecahedron_trajectory_full.trr  elements_complex_switches.yaml  elements_complicated_group.yaml  elements_duplicate_symbol.yaml  elements_duplicate_symbol2.yaml  elements_duplicate_symbol3.yaml  elements_incomplete.yaml  elements_invalid_field.yaml  elements_invalid_group.yaml  elements_invalid_mass.yaml  elements_invalid_query.yaml  elements_invalid_vdw.yaml  elements_properties_complete.yaml  elements_properties_incomplete.yaml  elements_symbols_switched.yaml  elements_update.yaml  elements_update_guess_bonds_warning.yaml  example.gro  example.pqr  example.tpr  example_box9.gro  example_box_zero.gro  example_empty_box_line.gro  example_end.pqr  example_endmdl.pqr  example_group.pqr  example_incomplete_line.gro  example_invalid_atomid.gro  example_invalid_box.pqr  example_invalid_chain.pqr  example_invalid_coord.pqr  example_invalid_position.gro  example_invalid_resid.gro  (+107 more)
test_files/split/: info.txt  traj1.gro  traj1.trr  traj1.xtc  traj2.gro  traj2.trr  traj2.xtc  traj3.gro  traj3.trr  traj3.xtc  traj3b.xtc  traj4.gro  traj4.trr  traj4.xtc  traj5.gro  traj5.trr  traj5.xtc  traj6.trr  traj6.xtc
