[package]
name = "groan_rs"
description = "Gromacs Analysis Library for Rust"
version = "0.10.0-dev.1"
license = "MIT"
edition = "2021"
authors = ["Ladislav Bartos"]
repository = "https://github.com/Ladme/groan_rs"
keywords = ["gromacs", "molecular-dynamics"]
categories = ["command-line-utilities", "science"]
build = "build.rs"
exclude = ["test_files", ".vscode", "book", "validation"]

[dependencies]
colored = "2.1"
float-cmp = "0.10.0"
indexmap = { version = "2.7", features = ["serde"] }
regex = "1.11.1"
thiserror = "2.0.4"
serde = { version = "1.0.215", features = ["derive"] }
serde_yaml = "0.9"
fancy-regex = "0.14.0"
nalgebra = "0.33.2"
minitpr = "0.2.2"
ndarray = "0.16.1"
hashbrown = "0.15.2"
getset = "0.1.3"
parking_lot = { version = "0.12.3", optional = true }
molly = { version = "0.3.2", optional = true }

[dev-dependencies]
file_diff = "1.0.0"
tempfile = "3.14.0"
rand = "0.8.5"
criterion = "0.5.1"
paste = "1.0.15"

[build-dependencies]
cc = { version = "1.2.1", features = ["parallel"] }

[features]
serde = ["ndarray/serde", "hashbrown/serde"]
parallel = ["dep:parking_lot"]
molly = ["dep:molly"]

[[bench]]
name = "main"
harness = false
