[package]
name = "groan_rs"
description = "Gromacs Analysis Library for Rust"
version = "0.11.2-dev.1"
license = "MIT"
edition = "2021"
authors = ["Ladislav Bartos"]
repository = "https://github.com/Ladme/groan_rs"
keywords = ["gromacs", "molecular-dynamics"]
categories = ["command-line-utilities", "science"]
build = "build.rs"
exclude = [
    "test_files",
    ".vscode",
    "book",
    "comparison",
    "run_check.sh",
    "run_check_tests.sh",
    "run_doc_tests.sh",
    "run_tests.sh",
]

[dependencies]
colored = "3.0.0"
float-cmp = "0.10.0"
indexmap = { version = "2.8.0", features = ["serde"] }
regex = "1.11.1"
thiserror = "2.0.12"
serde = { version = "1.0.218", features = ["derive"] }
serde_yaml = "0.9"
fancy-regex = "0.16.1"
nalgebra = "0.34.0"
minitpr = "0.2.3"
ndarray = "0.16.1"
hashbrown = "0.15.2"
getset = "0.1.5"
parking_lot = { version = "0.12.3", optional = true }
molly = { version = "0.5.0", optional = true }
chemfiles = { version = "0.10.41", optional = true }
itertools = "0.14.0"
dyn-clone = "1.0.19"

[dev-dependencies]
file_diff = "1.0.0"
tempfile = "3.19.0"
rand = "0.9.0"
criterion = "0.5.1"
paste = "1.0.15"

[build-dependencies]
cc = { version = "1.2.16", features = ["parallel"] }

[features]
default = ["molly"]
molly = ["dep:molly"]
chemfiles = ["dep:chemfiles"]
serde = ["ndarray/serde", "hashbrown/serde"]
parallel = ["dep:parking_lot"]
no-xdrfile = []

[[bench]]
name = "main"
harness = false
